--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.6.5",
     "git": "^0.1.5",
     "lodash.debounce": "^4.0.8",
-    "vue": "^3.3.11"
+    "vue": "^3.3.11",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
@@ -21,6 +22,6 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
-    "vite": "^5.0.10"
+    "vite": "^5.2.10"
   }
 }
